# NLP

./: .gitignore  README.md  arquivo  pyproject.toml  tmp.ipynb
models/nltk/: NLTK.ipynb
pocks/: spaCy.ipynb
testes/vectorizer/: count_vectorizer.ipynb  count_vectorizer.py
testes/vectorizer/.ipynb_checkpoints/: count_vectorizer-checkpoint.ipynb
