[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Ramon Medeiro <r.medeiro10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keras = "^2.12.0"
pandas = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
